# apps/server/public/openapi.json
@@ -1,123 +1,123 @@
 {
-  "info": {
-    "title": "promptsu API",
-    "version": "0.0.1"
-  },
-  "servers": [
-    {
-      "description": "oRPC",
-      "url": "http://localhost:3000/rpc"
-    }
-  ],
-  "openapi": "3.1.1",
-  "paths": {
-    "/generateCoverLetter": {
-      "post": {
-        "operationId": "generateCoverLetter",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "cvText": {
-                    "type": "string",
-                    "minLength": 1
-                  },
-                  "jobTitle": {
-                    "type": "string",
-                    "minLength": 1
-                  },
-                  "jobDescription": {
-                    "type": "string",
-                    "minLength": 1
-                  },
-                  "yourName": {
-                    "type": "string",
-                    "minLength": 1
-                  },
-                  "additionalInstructions": {
-                    "type": "string"
-                  },
-                  "coverLetterTone": {
-                    "type": "string",
-                    "minLength": 1
-                  }
-                },
-                "required": [
-                  "cvText",
-                  "jobTitle",
-                  "jobDescription",
-                  "yourName",
-                  "coverLetterTone"
-                ]
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "anyOf": [
-                    {},
-                    {
-                      "not": {}
-                    }
-                  ]
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/healthCheck": {
-      "post": {
-        "operationId": "healthCheck",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "anyOf": [
-                    {},
-                    {
-                      "not": {}
-                    }
-                  ]
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/privateData": {
-      "post": {
-        "operationId": "privateData",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "anyOf": [
-                    {},
-                    {
-                      "not": {}
-                    }
-                  ]
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  }
+	"info": {
+		"title": "promptsu API",
+		"version": "0.0.1"
+	},
+	"servers": [
+		{
+			"description": "oRPC",
+			"url": "http://localhost:3000/rpc"
+		}
+	],
+	"openapi": "3.1.1",
+	"paths": {
+		"/generateCoverLetter": {
+			"post": {
+				"operationId": "generateCoverLetter",
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"cvText": {
+										"type": "string",
+										"minLength": 1
+									},
+									"jobTitle": {
+										"type": "string",
+										"minLength": 1
+									},
+									"jobDescription": {
+										"type": "string",
+										"minLength": 1
+									},
+									"yourName": {
+										"type": "string",
+										"minLength": 1
+									},
+									"additionalInstructions": {
+										"type": "string"
+									},
+									"coverLetterTone": {
+										"type": "string",
+										"minLength": 1
+									}
+								},
+								"required": [
+									"cvText",
+									"jobTitle",
+									"jobDescription",
+									"yourName",
+									"coverLetterTone"
+								]
+							}
+						}
+					}
+				},
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{},
+										{
+											"not": {}
+										}
+									]
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/healthCheck": {
+			"post": {
+				"operationId": "healthCheck",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{},
+										{
+											"not": {}
+										}
+									]
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/privateData": {
+			"post": {
+				"operationId": "privateData",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{},
+										{
+											"not": {}
+										}
+									]
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 }
